# vk_edu_test

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/tests/: test_for_vk_edu.py
