[tool.poetry]
name = "vk-edu-test"
version = "0.1.0"
description = ""
authors = ["kiselyovda <kiselyovda@ya.ru>"]
readme = "README.md"
packages = [{include = "vk_edu_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
